# Urho3D_and_Qt5_with_CMAKE

./: CMakeLists.txt  LICENSE  README.md
cmake/: readme.md
src/: CMakeLists.txt  Urho3DQtApplication.h  Urho3DQtMainWindow.h  main.cpp  urho3dqtapplication.cpp  urho3dqtcentralwidget.cpp  urho3dqtcentralwidget.h  urho3dqtmainwindow.cpp
src/res/: app.rc
